03-kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts # same as line 13
  template:
    metadata:
      labels:
        app: posts # same as line 9
    spec:
      containers:
        - name: posts
          image: alpine:3.5
