03-kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: posts-pod
spec:
  containers:
  - name: posts
    image: alpine:3.5
    command: ["ping", "8.8.8.8"]
