03-kubernetes/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts # this selects all the pods with this label app='posts'
  ports:
    - name: posts
      protocol: TCP
      port: 4000 # service port
      targetPort: 4000 # actual port that the node application listens to indside the pod
