03-kubernetes/ingress-svc.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx # needed for ingres-nginx
spec:
  rules:
    - host: posts.com # only useful for dev environment, for easy access. In the production application, this will be something like `tesla.posts 
      http:
        paths:
          - path: /posts # posts.com/posts will point to posts cluster IP service
            backend:
              serviceName: posts-cluster-ip-srv
              servicePort: <clusterIPPort>
